# Aruco_Hanoi_Robot

./: .gitignore  README.md  marker_search_fix.py  pyproject.toml  requirements.txt  run_lab3.py
lab3/: __init__.py  __main__.py  aruco.py  aruco_viz.py  cli.py  config.py  geometry.py  part1.py  part2.py  part3.py  part_2_output.txt  paths.py  ur10e_kinematics.py
lab3/gui/: __init__.py  main_window.py
test_images/reports/: aruco_detection_test_practice_report.txt  aruco_detection_test_report.txt
