[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cds-me-235-lab3"
version = "0.1.0"
description = "CDS/ME-235 Lab 3 — vision, grasping, Tower of Hanoi"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-contrib-python>=4.8",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lab3*"]

[tool.setuptools.package-data]
lab3 = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
